--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,7 @@ jobs:
         run: sh ./autogen.sh
 
       - name: Test
-        env:
-          CIRCLECI: 1
         shell: bash
-        run: make check
+        env:
+          VERBOSE: 1
+        run: make -e -j3 check
