GitHub Action setup (#15)
* GitHub Action setup
* Undo variable substitution that got into ".in"
* Add message to assertion to debug failing tests
* Run unit tests in isolation to avoid side-effects
* Don't compare unstable highlighting of Pygments, but only the file locations

--- a/test/unit/test-cmd-info-variables.sh.in
+++ b/test/unit/test-cmd-info-variables.sh.in
@@ -14,8 +14,8 @@ test_cmd_info_variables()
 	fi
     done
 
-    assertEquals "1" "$found"
-    assertEquals "0" "$too_permissive"
+    assertEquals "Filtering with -i must show integer variables" "1" "$found"
+    assertEquals "Filtering with -i must hide non-integer variables" "0" "$too_permissive"
 
     found=0
     too_permissive=0
@@ -27,16 +27,17 @@ test_cmd_info_variables()
 	fi
     done
 
-    assertEquals "1" "$found"
-    assertEquals "0" "$too_permissive"
+    assertEquals "Filtering with -x must show exported variables" "1" "$found"
+    assertEquals "Filtering with -x must hide unexported variables" "0" "$too_permissive"
     # FIXME try -x -i, and no options. try invalid opts
 }
 
-if [ '/src/external-vcs/sourceforge/bashdb' = '' ] ; then
-  echo "Something is wrong: abs_top_srcdir is not set."
+abs_top_srcdir=@abs_top_srcdir@
+if [ ! -d $abs_top_scrdir ] ; then
+  >&2 echo "Something is wrong in configuation: abs_top_srcdir is not set properly."
  exit 1
 fi
-abs_top_srcdir=/src/external-vcs/sourceforge/bashdb
+
 # Make sure $abs_top_src has a trailing slash
 abs_top_srcdir=${abs_top_srcdir%%/}/
 . ${abs_top_srcdir}test/unit/helper.sh
