Sync configure setup and unit test setup with bash-5.2

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 # Copyright (C) 2002-2012,
-# 2014-2019 Rocky Bernstein <rocky@gnu.org>
+# 2014-2019, 2023 Rocky Bernstein <rocky@gnu.org>
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -24,14 +24,12 @@ define(POSIXSHELL, bash)
 define(OK_BASH_VERS, 4.4)
 define(relstatus, 1.0.2git)
 
-AC_INIT([bashdb],
-  [OK_BASH_VERS-relstatus],
-  [https://sourceforge.net/p/bashdb/bugs/new/])
+AC_INIT([bashdb],[OK_BASH_VERS-relstatus],[https://sourceforge.net/p/bashdb/bugs/new/])
 
 dnl make sure we are using a recent autoconf version.
 dnl In particular we assume prefix will be set to "NONE" if --prefix
 dnl isn't given. Earlier autoconf' used "no" instead of "NONE".
-AC_PREREQ(2.69)
+AC_PREREQ([2.71])
 
 ##################################################################
 # See if --prefix was set. If not, set it to a reasonable default
@@ -46,8 +44,7 @@ AM_MAINTAINER_MODE
 AC_SUBST(BASHVERS)
 AC_SUBST(RELSTATUS)
 
-AC_ARG_WITH(bashdb-main, AC_HELP_STRING([--with-bashdb-main],
-		  [location of bashdb-main.inc]),
+AC_ARG_WITH(bashdb-main, AS_HELP_STRING([--with-bashdb-main],[location of bashdb-main.inc]),
 		  BASHDB_MAIN=$withval,
 		  ${ac_default_prefix/prefix}/bashdb/bashdb-main.inc)
 AC_SUBST(BASHDB_MAIN)
@@ -85,7 +82,7 @@ AC_PROG_SED
 CMDLINE_INVOKED='$0 == ${BASH_SOURCE}'
 AC_SUBST(CMDLINE_INVOKED)
 
-AM_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS(config.h)
 AC_DEFINE([PACKAGE], [bashdb], [Bash Debugger])
 AC_DEFINE([VERSION], [OK_BASH_VERS-relstatus], [version string])
 
@@ -112,8 +109,7 @@ AC_PROG_MAKE_SET
 ## --with-bash can be used to tell the bashdb script and the regression
 ## test which bash to run. It can be omitted too in which case we'll
 ## look for a bash binary.
-AC_ARG_WITH(POSIXSHELL, AC_HELP_STRING([--with-POSIXSHELL],
-                  [location of POSIXSHELL program]), SH_PROG=$withval)
+AC_ARG_WITH(POSIXSHELL, AS_HELP_STRING([--with-POSIXSHELL],[location of POSIXSHELL program]), SH_PROG=$withval)
 
 if test "$SH_PROG" = "yes" || test "$SH_PROG" = "no" || test -z "$SH_PROG"
 then
@@ -140,9 +136,9 @@ case "${bash_major}.${bash_minor}" in
     ;;
 esac
 
-AC_ARG_WITH(dbg-main, AC_HELP_STRING([--with-dbg-main],
-                  [location of dbg-main.sh]),
-		  DBGR_MAIN=$withval)
+AC_ARG_WITH(dbg-main, AS_HELP_STRING([--with-dbg-main],[location of dbg-main.sh]),
+		  [DBGR_MAIN=$withval]
+		  [DBGR_MAIN=${ac_default_prefix/prefix}/bashdb/bashdb-main.inc])
 AC_SUBST(DBGR_MAIN)
 
 mydir=$(dirname $0)
